# webserv

./: .gitignore  CMakeLists.txt  CasesGET.cpp  CasesGET.h  Makefile  README.md  cgi.py  mime.types  nginx.conf  pipes  pipetest.cc  webserv.conf
.github/workflows/: AutoFormatter.yml  cmake.yml
cgi/: cgi.py  client_redir.cgi  form.cgi  server_redir.cgi  simple.cgi
docs/: Config.md
eval/: notes  webserv.conf
eval/cgi/: client_redir.cgi  client_redir_doc.cgi  form.cgi  invalid.cgi  list_env.cgi  py_list_env.cgi  simple.cgi
eval/html/: form.html  form_doc.html  redir.html
eval/script/: delete.sh  get.sh  post.sh  put.sh  test.sh
html/: form.html  redir.html
html/error/: 404.html
srcs/: Server.cc  Server.h  get_rand  main.cc
srcs/cgi/: Cgi.cc  Cgi.h
srcs/config/: BlockDirective.cc  BlockDirective.h  Config.cc  Config.h  ConfigBlock.cc  ConfigBlock.h  ConfigFile.cc  ConfigFile.h  ConfigParse.cc  ConfigParse.h  ConfigRoute.h  ConfigServer.cc  ConfigServer.h  IDirective.h  SimpleDirective.cc  SimpleDirective.h
srcs/http/: .ACase.h.swp  .CasesGET.cc.swp  .CasesGET.h.swp  .RequestHandler.cc.swp  .RequestHandler.h.swp  ACase.h  Cases.cc  Cases.h  CasesGET.cc  CasesGET.h  CasesPOST.cc  Cgi.cc  Cgi.h  ErrorPage.cc  ErrorPage.h  ErrorResponse.cc  ErrorResponse.h  Header.cc  Header.h  Headers.cc  Headers.h  MIME.h  Message.cc  Message.h  Method.h  Request.cc  Request.h  RequestHandler.cc  RequestHandler.h  Response.cc  Response.h  Status.h
srcs/io/: BufferPool.h  Connection.cc  Connection.h  ConnectionBuffer.cc  ConnectionBuffer.h  EventQueue.cc  EventQueue.h  Handler.cc  Handler.h  IOException.h  IOTask.h  ListenSocket.cc  ListenSocket.h  RingBuffer.cc  RingBuffer.h  Signal.h  Socket.cc  Socket.h
srcs/io/task/: DiscardBody.h  IOTask.cc  IOTask.h  ReadRequest.cc  ReadRequest.h  RecvFile.h  SendFile.cc  SendFile.h  SendResponse.cc  SendResponse.h  SimpleBody.cc  SimpleBody.h  SpliceIn.cc  SpliceIn.h  SpliceOut.cc  SpliceOut.h
srcs/server/: Route.h  VServer.h
srcs/util/: Log.h  String.h  WebServ.h
test/: compile  get.py  log  put.sh  test_get.cc  unit_test
test/request/: delete_request  get_index  get_root
test/unit_test.dSYM/Contents/Resources/DWARF/: unit_test
